# plaine

./: .gitignore  Cargo.toml  README.md  bacon.toml
src/: _main.rs  db.rs  instruct.rs  item.rs  lib.rs  main.rs  plan.rs  read.rs  schema.rs  style.css  utils.rs  write.rs
src/app/: components.rs  main.rs
src/app/assets/: style.css
src/db/: building.rs  ready.rs
src/plan/: status.rs
src/read/: all_listings_report.rs  tests.rs
