[package]
name = "plaine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
csv = "1.1.6"
include-doc = "0.0.2"
rfd = "0.11.0"
uuid = { version = "1.3.0", features = ["v4", "v1"] }
anyhow = "1.0.66"
parity-wordlist = "1.3.1"
derive_builder = "0.12.0"
eframe = "0.21.3"

