[package]
name = "plaine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
derive_builder = "0.12.0"
eframe = "0.21.3"
num-traits = "0.2.15"
parity-wordlist = "1.3.1"
rfd = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["v4", "v1"] }
mongodb = "2.4.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread",  "macros", "fs"] }
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"

